fix footer alignment

--- a/style.css
+++ b/style.css
@@ -64,7 +64,10 @@ html, body {
 .profile {
     width: 32px;
     border-radius: 50%;
+}
 
+.profile:hover {
+    box-shadow: 0px 0px 0px 4px rgb(230, 230, 230);
 }
 
 /* center */
@@ -166,7 +169,9 @@ html, body {
     justify-content: space-between;
     flex-wrap: wrap;
     background-color: #f2f2f2;
-    height: 40px;
+    height: 46px;
+    padding-left: 20px;
+    padding-right: 20px;
 }
 
 .footerContainer a {
